<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="11dp"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:fontFamily="sans-serif-condensed-medium"

        app:layout_constraintBottom_toTopOf="@+id/menuDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuDescription"
        android:layout_width="362dp"
        android:layout_height="109dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="541dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/mainDescription"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitle" />

    <Button
        android:id="@+id/createSandButt"
        android:layout_width="215dp"
        android:layout_height="69dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/createButtText"
        android:textSize="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/breadSearchButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuDescription" />

    <Button
        android:id="@+id/breadSearchButt"
        android:layout_width="215dp"
        android:layout_height="69dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="183dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/viewButtText"
        android:textSize="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSandButt" />


</androidx.constraintlayout.widget.ConstraintLayout>

